assets/less/views/messages.less
.messagesView {
	#main {
		.box;
		overflow-y: hidden !important;
	}
	#topicListWrap {
		margin-right: 3px;
		#topicList {
			.unstyled;
			.box-fix;
			#topicListScroll {
				.box-fix;
			}
			.topic {
				.border-radius(5px);
				border-bottom: 1px solid #aaa;
				.box-fix;
				cursor: pointer;
				.left {
					.userimg {
						.border-radiuses(0px, 0px, 5px, 5px);
					}
				}	
				.username {
					font-size: 0.9em!important;
					.status {
						border: 1px solid #ececec;
					}
				}
				.lastMessage {
					font-size: 0.8em;
					color: #555;
				}
				.time {
					font-size: 80%;
					color: #888;
					float: right;
					margin-right: 5px;
					margin-top: 10px;
				}
				&:hover {
					background-color: @primaryLightest;
					.username {
						color: #ececec;
					}
					.lastMessage {
						color: #eee;
					}
					.time {
						color: #eee;
					}
				}
				&.unread {
					background-color: @primaryLighter;
					.username {
						color: #ececec;
					}
					.lastMessage {
						color: #eee;
					}
					.time {
						color: #eee;
					}
					&:hover {
						background-color: @primaryLightest;
					}		
				}
				&.active {
					background-color: @primaryLighter;
					.username {
						color: #ececec;
					}
					.lastMessage {
						color: #eee;
					}
					.time {
						color: #eee;
					}
					&:hover {
						background-color: @primaryLightest;
					}
				}
				&#newmessage {
					border: none;
					.border-radius(2px);
					background: transparent;
					.btn {
						width: 100%;
					}
				}
				&.groupChat {
					.left {
						background-color: #b2b2b2;
						.border-radius(5px);
						img, span, div {
							.border-radius(0);
							&:nth-child(1) {
								.border-radiuses(0,0,0,5px);
							}
							&:nth-child(2) {
								.border-radius(0);	
							}
							&:nth-child(3) {
								.border-radiuses(0,0,5px,0);	
							}
							&:nth-child(4) {
								.border-radius(0);	
							}
						}
						span, div {	
							background-color: #343434;
							color: @white;
							.box-fix;
							height: 100%;
						}
					}
				}
			}
		}
	}
	#topicWrap {
		#messageList {
			.message {
				.messageContent {
					background: darken(@grayLighter,10%);
					border: 1px solid #b2b2b2;
					.border-radius(6px);
					overflow: hidden;
					word-wrap: break-word;
					.clear-fix;
					.time {
						font-size: 80%;
						color: #888;
						float: right;
						margin-right: 5px;
						margin-top: -5px;
					}
					a {
						&:hover {
							text-decoration: underline;
						}
					}
				}	
				.userimg {
					img {
						.border-radius(100%);
					}
				}
				&.me {
					.messageContent {
						background: darken(@green,5%);
						a {
							color: #efefef;
							&:hover {
								color: @white;
							}
						}
						.messageText {
							color: #efefef;
						}
						.time {
							color: #eee;
						}
					}
				}
			}
		}
		&.peerChat {
			#messageList {
				.unstyled;
				overflow-y: scroll;
				.message {
					.user {
						.userimg {
							//.border-radiuses(0,0,0,6px);
						}
						.username {
							display: none;
						}
					}
					&.me {
						.messageText {
							float: right;
							word-break: break-word;
							color: #efefef;
						}
						.user {
							.userimg {
								float: right;
								display: block;
								margin-right: 0 !important;
							}
						}
					}
					&.other {
						color: #4e4e4e;
						.user {
							.userimg {
								margin-left: 0 !important;
							}
						}
					}
				}
			}		
		}
		&.newMessage {
			#messageTitle {
				h2 {
					.column(12);
				}
			}
			#messageInput {
				margin-bottom: 14px !important;
			}
			#sendmessage {
				.btn--big;
				margin-left: 1% !important;
			}
		}		
	}
}

